fixed about page just needs background color for readable text. Also woke up from my mini nap

--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -5,11 +5,20 @@
     background-attachment: fixed;
     background-position: center;
     background-color: black;
+    background-size: cover;
 }
 
 .aboutus-text {
-    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: row;
+
+    width: 100vw;
+    height: 100%;
+
+    padding-bottom: 100%;
+
     color: white;
     font-size: 20px;
-    margin-bottom: 100%;
+
 }
